src/test/ui/stability-attribute/stability-in-private-module.stderr
error[E0603]: module `thread_info` is private
  --> $DIR/stability-in-private-module.rs:2:26
   |
LL |     let _ = std::thread::thread_info::current_thread();
   |                          ^^^^^^^^^^^ private module
   |
note: the module `thread_info` is defined here
  --> $SRC_DIR/std/src/thread/mod.rs:LL:COL
   |
LL | use crate::sys_common::thread_info;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
